--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
 # Tax-Calculator
 South African tax calculator
 
-![image alt](https://github.com/MJTheSlamDog/Tax-Calculator/blob/bc42b5195797f37824047ab604aedf316b56f2bd/Screenshot%202025-03-05%20102519.png?raw=true)
+![Image Alt](https://github.com/MJTheSlamDog/Tax-Calculator/blob/main/Screenshot%202025-03-05%20102519.png?raw=true)
